# OpihiExarata

./: .coverage  .gitignore  README.md  __main__.spec  auxiliary.ps1  install.ps1  old_setup.py  pyproject.toml  qtui_automatic.py  qtui_manual.py  qtui_selector.py  setup.py  workspace.code-workspace
.github/ISSUE_TEMPLATE/: bug-report.md  feature-request.md
.github/workflows/: black.yml  linux_testing.yml  tests_linux.yml  tests_windows.yml  upload.yml  windows_testing.yml
doc/source/code/: opihiexarata.astrometry.rst  opihiexarata.gui.primary.rst  opihiexarata.gui.qt.rst  opihiexarata.library.error.rst  opihiexarata.rst
docs/: build_docstrings.ps1  docstring.bat  docstring.cmd  docstring.sh  index.html
docs/code/: modules.rst  opihiexarata.astrometry.solution.rst  opihiexarata.ephemeris.solution.rst  opihiexarata.gui.qtui.qtui_automatic.rst  opihiexarata.gui.qtui.qtui_selector.rst  opihiexarata.gui.qtui.rst  opihiexarata.gui.rst  opihiexarata.library.conversion.rst  opihiexarata.library.http.rst  opihiexarata.library.json.rst  opihiexarata.library.phototable.rst  opihiexarata.orbit.orbfit.rst  opihiexarata.orbit.rst  opihiexarata.propagate.solution.rst
docs/source/: conf.py  index.rst  introduction.rst  todo.txt
docs/source/assets/images/: Thumbs.db
docs/source/assets/images/internal/: README.txt  automatic-mode-flowchart.afdesign  busy_image_pyukumuku.afdesign  manual-mode-flowchart.afdesign  software-framework-diagram.afdesign  vehicle-function-astrometry.afdesign  vehicle-function-ephemeris.afdesign  vehicle-function-orbit.afdesign  vehicle-function-photometry.afdesign  vehicle-function-propagate.afdesign  vehicle-function-propagation.afdesign
docs/source/code/: opihiexarata.asteroid.orbit.rst  opihiexarata.asteroid.orbit.solution.rst  opihiexarata.asteroid.rst  opihiexarata.astrometry.solution.rst  opihiexarata.astrometry.webclient.rst  opihiexarata.ephemeris.rst  opihiexarata.gui.automatic.rst  opihiexarata.gui.functions.rst  opihiexarata.gui.manual.rst  opihiexarata.gui.old_automatic.rst  opihiexarata.gui.qtui.qtui_manual.rst  opihiexarata.gui.qtui.rst  opihiexarata.gui.rst  opihiexarata.gui.selector.rst  opihiexarata.gui.theme_viewer.rst  opihiexarata.library.engine.rst  opihiexarata.library.hint.rst  opihiexarata.library.json.rst  opihiexarata.library.mpcrecord.rst  opihiexarata.library.path.rst  opihiexarata.library.rst  opihiexarata.opihi.database.rst  opihiexarata.opihi.preprocess.rst  opihiexarata.opihi.rst  opihiexarata.opihi.solution.rst  opihiexarata.orbit.custom.rst  opihiexarata.photometry.panstarrs.rst  opihiexarata.photometry.rst  opihiexarata.photometry.solution.rst  opihiexarata.propagate.polynomial.rst  opihiexarata.propagate.rst  opihiexarata.propagate.solution.rst  opihiexarata.rst
docs/source/installation/: documentation.rst  download.rst  orbfit.rst  python.rst  windows.rst
docs/source/technical/: conventions.rst  index.rst  license.rst
docs/source/technical/algorithms/: index.rst  photometric_zero_point.rst  polynomial_propagation.rst  spherical_kinematics.rst
docs/source/technical/architecture/: graphical_user_interface.rst  index.rst  library.rst  services_engines.rst  vehicles_solutions.rst
docs/source/technical/installation/: documentation.rst  download.rst  index.rst  orbfit.rst  python.rst  windows.rst
docs/source/technical/preprocessing/: index.rst
docs/source/user/: automatic_mode.rst  citations.rst  command_line.rst  configuration.rst  index.rst  manual_mode.rst  opihi_telescope.rst  recording_fits_file.rst  system_framework.rst  trivia.rst  troubleshooting.rst  zero_point_monitoring.rst
gui/: primary.py
install/: install_python.ps1
src/OpihiExarata/: __init__.py
src/OpihiExarata.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/opihiexarata/: __init__.py  __main__.py  __version__.py  command.py  configuration.yaml  secrets.yaml
src/opihiexarata/asteroid/: __init__.py
src/opihiexarata/asteroid/orbit/: __init__.py  orbfit.py  solution.py
src/opihiexarata/astrometry/: __init__.py  solution.py  webclient.py
src/opihiexarata/ephemeris/: __init__.py  jplhorizons.py  solution.py
src/opihiexarata/gui/: __init__.py  asteroid_selector.py  automatic.py  functions.py  main.py  manual.py  name.py  old_automatic.py  old_manual.py  opihi_image.py  primary.py  qt.py  selector.py  target_selector.py  test.py  test2.py  theme_viewer.py
src/opihiexarata/gui/qtui/: __init__.py  automatic.ui  build_qtui_window.ps1  main.ui  manual.ui  old_manual.ui  primary.ui  qtui_automatic.py  qtui_main.py  qtui_manual.py  qtui_primary.py  qtui_selector.py  selector.ui
src/opihiexarata/opihi/: __init__.py  database.py  preprocess.py  solution.py
src/opihiexarata/orbit/: __init__.py  custom.py  orbfit.py  solution.py
src/opihiexarata/photometry/: __init__.py  panstarrs.py  solution.py
src/opihiexarata/propagate/: __init__.py  polynomial.py  solution.py
tests/: __init__.py  test_global.py
tests/test_astrometry/: test_astrometry_webclient.py
tests/test_library/: test_library_conversion.py  test_library_http.py  test_library_path.py  test_library_pathname.py
